# merkle-tree-starknet

./: .gitignore  Documentation.md  README.md  run.sh
.github/workflows/: cd.yml  static.yml
c/: Makefile  expected.txt  run.sh
c/src/: main.c
c_common/: Makefile
c_common/src/: test_tree.c
c_common/src/include/: test_tree.h
c_fake_impl/: Makefile  run.sh
c_fake_impl/src/: main.c
c_template/: .clang-format  Makefile
c_template/src/: main.c
doc/: Documentation.md  main.md  test_framework.md
docs/: README.md  _annexes.html  _general_explanation_of_merkle_trees.html  _introduction_to_the_different_implementations.html  _merkle_trees_uses_and_peculiarities_in_starknet.html  _testing_bonsai_trie_implementations.html  _testing_implementations.html  archive_gh_pages.sh  bonsai_evolution.adoc  index.adoc  index.html  render_doc.sh  review.txt  test_framework.adoc
go/: Dockerfile  README.md  run.sh
go/src/: check_leak.sh  expected.txt  go.mod  go.sum  main.go  run.sh
go_common/: go.mod  libtree_go.go
go_juno/: check_leak.sh  go.mod  main.go  run.sh
go_template/: README.md  go.sum  main.go  run.sh
python/: bindings.py  command_interpreter.py  main.py  run.sh
python_cairo/: main.py  run.sh
python_common/: README.md  bindings.py  command_interpreter.py  main.py  setup.py  test_tree.py
python_template/: main.py  run.sh
rust/: Cargo.toml  check_leak.sh  data.yml
rust/rust_ffi/: Cargo.toml  bindings.h
rust/rust_ffi/src/: lib.rs
rust/scenario/: 1.yml  2.yml  2_crash_the_proof.yml
rust/src/: command_interpreter.rs  command_interpreter_bonsai.rs  command_interpreter_path_finder.rs  main.rs  shared_tree.rs
rust_bonsai/: Cargo.toml
rust_bonsai/src/: command_interpreter_bonsai.rs  main.rs
rust_common/: Cargo.toml
rust_common/src/: command.rs  command_line.rs  lib.rs  tree.rs
rust_ffi/: Cargo.toml  bindings.h
rust_ffi/rust_ffi/: Cargo.toml
rust_ffi/rust_ffi/src/: lib.rs  test_generator.rs  yaml_parser.rs
rust_ffi/src/: lib.rs
rust_ffi/xtask/src/: main.rs
rust_pathfinder/: Cargo.toml  check_leak.sh  run.sh
rust_pathfinder/src/: command_interpreter_path_finder.rs  main.rs
rust_template/: Cargo.toml
rust_template/src/: main.rs
scenario/: 1.yml  2.yml  2_crash_the_proof.yml  3.yml  4.yml
scenarios/: 1.yml  2.yml  2_crash_the_proof.yml  3.yml  4.yml  bonsai_strange_bug.yml  get.yml  insert.yml  insert_key0.yml  reformat.yml  schema.json
scripts/: common.sh
ts_common/: expected.txt
ts_common/deno/: main.ts
ts_common/node/: package.json
ts_common/node/src/: index.ts
ts_fake_impl/: main.ts
ts_template/: main.ts  run.sh
typescript/: Dockerfile  README.md  run.sh
typescript/deno/: main.ts
typescript/node/: package-lock.json
zig/: build.zig  run.sh
zig/src/: main.zig
zig_common/: build.zig  build.zig.zon
zig_common/src/: main.zig
zig_fake_impl/: README.md  build.zig  run.sh
zig_fake_impl/src/: main.zig
zig_template/: Dockerfile  build.zig.zon
zig_template/src/: main.zig
