[package]
name = "bonsai-trie-test-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# to fix type that may be reexported by bonsai-trie
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
bonsai-trie = { git = "https://github.com/keep-starknet-strange/bonsai-trie" }
starknet-types-core = "0.0.7"
log = "0.4.14"
env_logger = "0.11.2"
anyhow = "1.0.79"

rust_common = { version = "0.1.0", path = "../rust_common" }
