[package]
name = "rust_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bitvec = "1.0.1"
clap = { version = "4.5.1", features = ["cargo"] }
env_logger = "0.11.2"
log = "0.4.20"
rust_ffi = { version = "0.1.0", path = "../rust_ffi/rust_ffi" }
starknet-types-core = "0.0.7"
