[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet-types-core = "0.0.7"
log = "0.4.14"
env_logger = "0.11.2"
pathfinder-merkle-tree = { path = "pathfinder/crates/merkle-tree/" }
pathfinder-common = { path = "pathfinder/crates/common" }
pathfinder-crypto = { path = "pathfinder/crates/crypto" }
pathfinder-storage = { path = "pathfinder/crates/storage" }
anyhow = "1.0.79"

mp-felt = { git = "https://github.com/keep-starknet-strange/madara.git", rev = "f30acea8af7e28e956e771928130e12bfc084832", package = "mp-felt", features = [
    "parity-scale-codec",
    "serde",
] }
bitvec = "1.0.1"
serde_json = "1.0.113"
serde = "1.0.196"
rust_common = { version = "0.1.0", path = "../rust_common" }
