[package]
name = "rust_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
yaml-rust = "0.4"
# just for the BasicId
#bonsai-trie = { git = "https://github.com/keep-starknet-strange/bonsai-trie" }

[build-dependencies]
cbindgen = "0.26.0"
