[package]
name = "rust_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
# just for the BasicId
#bonsai-trie = { git = "https://github.com/keep-starknet-strange/bonsai-trie" }
serde = {version = "1.0.197", features = ["derive"]}
serde_yaml = "0.9.32"
anyhow = "1.0.80"
rand = "0.8.5"
strum = { version = "0.26.1", features = ["derive", "strum_macros"] }
strum_macros = "0.26.1"
num-bigint = { version = "0.4.4", features = ["rand"] }

[build-dependencies]
cbindgen = "0.26.0"
